Correct RTL alignment of page title on chrome://policy
Currently the page header is aligned too far to the left, when viewing
the chrome://policy page in a right-to-left language. This looks
especially bad when scrolling down (see screenshots attached to bug).
This change aligns the page title to the right hand side in RTL mode.

BUG=253860

Review URL: https://chromiumcodereview.appspot.com/17587016

git-svn-id: svn://svn.chromium.org/chrome/trunk/src@210167 0039d316-1c4b-4281-b951-d872f2087c98

Former-commit-id: 4f403355a14a568cc190e795db940fa00738a3e3

--- a/chrome/browser/resources/policy.css
+++ b/chrome/browser/resources/policy.css
@@ -22,6 +22,10 @@ body.uber-frame header {
   max-width: none;
 }
 
+html[dir='rtl'] body.uber-frame header {
+  right: 23px;
+}
+
 body.uber-frame section {
   max-width: none;
 }
